--- a/style/style.css
+++ b/style/style.css
@@ -5,16 +5,26 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
-
-body div {
     width: 100%;
     height: 100vh;
     display: grid;
     place-items: center;
 }
 
-body div img{
+
+.logoInicio{
     width: 230px;
     height: 200px;
+    animation: logo 5s ease;
+}
+
+@keyframes logo {
+    0%{
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 100;
+    }
 }
