--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,12 @@ body{
     }
 }
 
+form{
+    margin: 0;
+    padding: 0;
+    display: none;
+}
+
 .login{
     width: 936px;
     height: 761px;
@@ -42,19 +48,55 @@ body{
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
     
-    
-
 }
-img{
+
+.logoLogin{
     width: 103px;
     height: 116px;
-    margin-top: 1.9%;
+    margin-top: 5%;
 }
 
 .titulo{
-    width: 500px;
-    height: 96px;
+    margin: 0;
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 40px;
+}
+
+label{
+    display: block;
+    margin-top: 1rem;
+    font-size: 25px;
+}
+
+p{
+    margin:2;
+    font-size: 20px;
+}
+
+
+input{
+
+    border: 1px solid #707070;
+    border-radius: 20px;
+    width: 650px;
+    height: 50px;
+}
+
+button{
+    margin: 2rem;
+    background-color: rgba(254, 112, 46, 1);
+    border: 0;
+    border-radius: 40px;
+    width: 336px;
+    height: 70px;
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.piePag{
+    font-size: 15px;
 }
