--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -7,3 +7,85 @@ html{
 body{
     margin: 0;
 }
+
+.preloader{
+    margin: 0;
+    background-image: url(../sources/img/pexels-pixabay-159400@2x.png);
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+.logoInicio{
+    position: absolute;
+    width: 230px;
+    height: 200px;
+    opacity: 0;
+    animation: logo 5s ease forwards;
+}
+
+@keyframes logo {
+    0%{
+        opacity: 0;
+        display: none;
+    }
+    75%{
+        opacity: 0;
+        display: none;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.welcome{
+    width: 936px;
+    height: 549px;
+    border: 1px solid #707070;
+    border-radius: 67px;
+    opacity: 0;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: signIn 4s ease forwards;
+}
+
+@keyframes signIn {
+    15%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 1;
+    }
+    80%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+.logoLogin{
+    width: 103px;
+    height: 116px;
+    margin-top: 5%;
+}
+
+.titulo{
+    margin: 0;
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 40px;
+}
+
+.piePag{
+    margin:2rem;
+    font-family: 'Myriad Pro Light';
+    font-size: 20px;
+}
