--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -22,11 +22,15 @@ body{
     position: absolute;
     width: 230px;
     height: 200px;
-    opacity: 0;
+    opacity: 1;
     animation: logo 2s ease forwards;
+    animation-delay: 1s;
 }
 
 @keyframes logo {
+    0%{
+        opacity: 1;
+    }
     15%{
         opacity: 0;
     }
@@ -51,7 +55,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    animation: signIn 2.5s ease forwards;
+    animation: signIn 3.5s ease forwards;
 }
 
 @keyframes signIn {
@@ -59,7 +63,7 @@ body{
         opacity: 0;
         display: none;
     }
-    75%{
+    80%{
         opacity: 0;
         display: none;
     }
