feat :hammer: Change the way of centering

--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -13,8 +13,9 @@ body{
     background-position: center;
     width: 100vw;
     height: 100vh;
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
