--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -19,6 +19,11 @@ body{
     height: 100vh;
     display: grid;
     place-items: center;
+    animation: preloaderAnimation 1s ease 5s forwards;
+}
+
+@keyframes preloaderAnimation {
+    
 }
 
 .logoInicio{
