feat :sparkles: developing page

--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -1,14 +1,14 @@
 @import url("../sources/myriad-pro-webfont/fonts.css");
 
-html{
+html {
     font-family: 'Myriad Pro Regular';
 }
 
-body{
+body {
     margin: 0;
 }
 
-.preloader{
+.preloader {
     margin: 0;
     background-image: url(../sources/img/pexels-pixabay-159400@2x.png);
     background-color: black;
@@ -17,21 +17,25 @@ body{
     background-position: center;
     width: 100vw;
     height: 100vh;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 99;
     animation: preloaderAnimation 1s ease 5s forwards;
+    display: none;
 }
 
 @keyframes preloaderAnimation {
-    0%{}
-    100%{
+    0% {}
+
+    100% {
         opacity: 0;
         visibility: hidden;
     }
 }
 
-.logoInicio{
+.logoInicio {
     position: absolute;
     width: 230px;
     height: 200px;
@@ -40,20 +44,22 @@ body{
 }
 
 @keyframes logo {
-    0%{
+    0% {
         opacity: 0;
         display: none;
     }
-    75%{
+
+    75% {
         opacity: 0;
         display: none;
     }
-    100%{
+
+    100% {
         opacity: 1;
     }
 }
 
-.welcome{
+.welcome {
     width: 936px;
     height: 549px;
     border: 1px solid #707070;
@@ -67,52 +73,134 @@ body{
 }
 
 @keyframes signIn {
-    15%{
+    15% {
         opacity: 0;
     }
-    60%{
+
+    60% {
         opacity: 1;
     }
-    80%{
+
+    80% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         opacity: 0;
     }
 }
 
-.logoLogin{
+.logoLogin {
     width: 103px;
     height: 116px;
     margin-top: 5%;
 }
 
-.titulo{
+.titulo {
     margin: 0;
     margin-top: 2rem;
     text-align: center;
     font-size: 40px;
 }
 
-.piePag{
-    margin:2rem;
+.piePag {
+    margin: 2rem;
     font-family: 'Myriad Pro Light';
     font-size: 20px;
 }
 
-.main{
+.main {
     margin: 0;
     background-color: #fff;
-    position: fixed;
     visibility: visible;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100vw;
     height: 100vh;
     display: flex;
-    z-index: -1;
+    z-index: 0;
 }
 
-h1{
-    color: black;
+.main header {
+    display: block;
+    width: 100%;
+    height: 81.5px;
+    border-bottom: 0.5px solid #000;
+}
+
+.perfil {
+    width: 53px;
+    height: 53px;
+}
+
+.notifi {
+    width: 21px;
+    height: 20px;
+}
+
+.setting {
+    width: 19px;
+    height: 19px;
+}
+
+.imgs {
+    float: right;
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+}
+
+.headerCenter {
+    display: flex;
+    width: ;
+}
+
+.headerCenter img {
+    width: 42px;
+    height: 37px;
+   
+}
+
+.leftOpcs,
+.rightOpcs {
+    display: flex;
+    flex-direction: row;
+    align-content: space-around;
+    justify-content: space-around;
+}
+
+.opc {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.opc p{
+    font-size: 24px;
+}
+
+.opc1 img {
+    width: 31px;
+    height: 31px;
+}
+
+.opc2 img {
+    width: 27px;
+    height: 27px;
+}
+
+.opc3 img {
+    width: 25px;
+    height: 32px;
+}
+
+.opc4 img {
+    width: 34px;
+    height: 38px;
+}
+
+.opc5 img {
+    width: 34px;
+    height: 34px;
 }
