--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -294,25 +294,26 @@ tbody tr {
 /* Indicadores */
 
 /*A*/
-
 /* Prueba de modulos*/
 .btn {
-    padding: 12px 20px;
-    color:rgb(0, 0, 0);
+    padding: 15px 30px;
+    background-color: #FE702E;
+    color:white;
     text-decoration: none;
-    border-radius: 25px;
+    border-radius: 30px;
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid  #FE702E;
     transition: all 0.3s ease;
-    font-weight: 500;
+    margin: auto;
     cursor: pointer;
-    display: inline-block;
+    display: flex;
+    text-align: center;
+    font-size: 25px;
+
 }
 
 .btn:hover {
-    background: rgba(255, 255, 255, 0.2);
-    transform: translateY(-2px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    background: #ff5100;
 }
 
 /*Cerrar modal*/
@@ -339,29 +340,28 @@ tbody tr {
     justify-content: center;
     z-index: 3;
     opacity: 1;
-    
 }
 
 .modal_general:target .modal {
-    transform: scale(1);
+    transform: scale(0.8);
 }
 .modal{
     background-color: #ffffff;
     border: 2px solid black;
-    width: 40vw;
-    height: 80vh;
+    width: 1000px;
+    height: 700px;
     flex-direction: column;
     align-items: center;
     transform: scale(0.7);
     display: flex;
     z-index: 3;
     transition: transform 0.3s ease;
-    gap: 1vi;
+    
     
 }
 
 .modal_header {
-    width: 40vw;
+    width: 1000px;
     color: rgb(0, 0, 0);
     border-color: #000000;
     border: 2px solid rgb(48, 47, 47);
@@ -369,8 +369,25 @@ tbody tr {
     justify-content: center;
     text-align: center;
     
+    
 }
 
+.modal input{
+    border-radius: 25px ;
+    display: flex;
+    text-align: center;
+    gap: 100px;
+    width: 40vw;
+    height: 2vw;
+    border: #D9D9D9;
+    background-color: #D9D9D9;
+    font-size: 20px;
+}
 
+.modal label{
+    display: flex;
+    text-align: center;
+    font-size: 130%;
+}
 
 
