--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -229,6 +229,7 @@ main {
     min-height: 1200px; 
 }
 
+
 .titleMain {
     font-size: 40px;
 }
@@ -321,9 +322,14 @@ tbody tr {
     display: flex;
     color: rgb(0, 0, 0);
     text-decoration: none;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     transition: opacity 0.3s ease;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 5px;
     }
     
 
@@ -340,6 +346,31 @@ tbody tr {
     justify-content: center;
     z-index: 3;
     opacity: 1;
+    flex-grow: 1;
+}
+.modal_general img {
+    width: 42px;
+    height: 37px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+
+}
+
+.modal_header h3 {
+    display: flex;
+    text-align: center;
+    width: 1471px;
+    align-content: flex-start;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-grow: 1;
+}
+
+a .cerrar_modal {
+    text-align: left;
 }
 
 .modal_general:target .modal {
@@ -366,9 +397,9 @@ tbody tr {
     border-color: #000000;
     border: 2px solid rgb(48, 47, 47);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
-    
+    flex-direction: row;
     
 }
 
