--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -345,7 +345,7 @@ button p {
 
 /*Main containt*/
 
-/* Prueba de modulos*/
+/* Botones*/
 .btn {
     padding: 15px 30px;
     background-color: #FE702E;
@@ -363,9 +363,6 @@ button p {
 
 }
 
-.btn:hover {
-    background: #ff5100;
-}
 
 /*Cerrar modal*/
 .cerrar_modal {
@@ -428,18 +425,20 @@ a .cerrar_modal {
     transform: scale(0.8);
 }
 
-.modal {
+.modal_ayuda {
     background-color: #ffffff;
     border: 2px solid black;
-    width: 1000px;
-    height: 700px;
+    width: auto;
+    height: auto;
     flex-direction: column;
     align-items: center;
     transform: scale(0.7);
     display: flex;
     z-index: 3;
     transition: transform 0.3s ease;
-
+    font-family: 'Myriad Pro Regular' ;
+    font-size: 24px;
+/**/
 
 }
 
@@ -455,7 +454,7 @@ a .cerrar_modal {
 
 }
 
-.modal input {
+.modal_ayuda input {
     border-radius: 25px;
     display: flex;
     text-align: center;
@@ -465,10 +464,84 @@ a .cerrar_modal {
     border: #D9D9D9;
     background-color: #D9D9D9;
     font-size: 20px;
+    margin: 8px;
+
 }
 
-.modal label {
+.modal_ayuda label {
     display: flex;
     text-align: center;
     font-size: 130%;
+    
+} 
+
+.modal_reportar{
+    background-color: #ffffff;
+    border: 2px solid black;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    transform: scale(0.7);
+    display: flex;
+    z-index: 3;
+    transition: transform 0.3s ease;
 }
+
+.name{
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+    
+}
+
+.correo{
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+}
+.cel{
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+    
+}
+.motivo {
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+}
+.motivo .motivo_cuadro {
+    height: 15vh;
+    
+}
+.modal_contain{
+    font-family: 'Myriad Pro Regular' ;
+    font-size: 20px;
+    
+}
+
+.modal_contain label{
+    width: 12rem;
+    text-align: center;
+    font-size: 122%;
+}
+    
+
+.modal_contain input{
+    border-radius: 25px;
+    flex-grow: 1;
+    display: flex;
+    width: 35vw;
+    height: 2.5vw;
+    border: #D9D9D9;
+    background-color: #D9D9D9;
+    font-size: 20px;
+    gap: 1vw;
+    margin: 1vw;
+
+}
+h1{
+    text-align: center;
+}
+
