feat :lipstick: Developing main.html media query

--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -378,7 +378,7 @@ button p {
         border-radius: 30px;
         height: auto;
         width: fit-content;
-        padding: 1vw;
+        padding: 1rem;
     }    
     
     .indicadoresPhone .tbody .contain-tr img {
