--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -406,15 +406,15 @@ button p {
 .modal_general {
     background-color: rgba(0, 0, 0, 0.7);
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    width: auto;
+    height: auto;
     top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 3;
-    opacity: 1;
+    opacity: 0;
     flex-grow: 1;
 }
 
@@ -427,6 +427,7 @@ button p {
 
 }
 
+
 .modal_general:target .modal_añadir {
     transform: scale(1);
 }
@@ -436,7 +437,6 @@ button p {
 }
 .modal_general:target .modal_ayuda{
     transform: scale(1);
-
 }
 
 .modal_añadir {
@@ -547,7 +547,7 @@ button p {
 }
 
 .modal_contain label{
-    width: 12rem;
+    width: 18rem;
     text-align: center;
     font-size: 122%;
 }
@@ -586,3 +586,30 @@ h1{
     
 }
 
+/*Confirmacion modulos*/
+.modal_seguro{
+    background-color: #ffffff;
+    border: 2px solid black;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    transform: scale(0.7);
+    display: flex;
+    z-index: 6;
+    transition: transform 0.5s ease;
+    padding-bottom: 2vh;
+}
+
+.modal_seguro strong{
+    text-align: center;
+    margin: 5vw;
+    font-family: 'Myriad Pro Regular';
+    font-size: 45px;
+    width: 30rem;
+}
+
+.botones{
+    display: flex;
+    gap: 5vw;
+}
