--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -438,17 +438,19 @@ button p {
 .modal_general {
     background-color: rgba(0, 0, 0, 0.7);
     margin: 0;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
+    visibility: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 3;
     opacity: 0;
     flex-grow: 1;
-    display: none;
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal_general img {
@@ -460,7 +462,10 @@ button p {
 
 }
 
-
+.modal_general:target{
+    opacity: 1;
+    visibility: visible;
+}
 .modal_general:target .modal_añadir {
     transform: scale(1);
 }
@@ -550,7 +555,6 @@ button p {
     display: flex;
     align-items: center;
     gap: 1vw;
-    
 }
 
 .correo{
