--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -25,6 +25,7 @@ body {
     justify-content: center;
     z-index: 99;
     animation: preloaderAnimation 1s ease 5s forwards;
+    display: none;
 }
 
 @keyframes preloaderAnimation {
@@ -338,6 +339,10 @@ a:hover {
     height: 81px;
 }
 
+.th p, .tr p{
+    text-align: center;
+}
+
 .indicadoresPhone{
     display: none;
 }
@@ -361,7 +366,24 @@ button p {
 }
 
 @media only screen and (max-width:1570px) {
-    .indicadores{
+    main .indicadores{
+        display: none;
+    }
+
+    .modal_eliminar .th, .modal_eliminar .tr{
+        grid-template-columns: 1fr 1fr;
+        gap: 2vw;
+    }
+
+    .modal_eliminar .indicadores{
+        padding: 0 1vw;
+    }
+
+    .modal_eliminar p{
+        font-size: 16px;
+    }
+
+    .modal_eliminar .indicadores .eliminar{
         display: none;
     }
 
@@ -469,7 +491,9 @@ button p {
 .modal_general:target .modal_añadir {
     transform: scale(1);
 }
-
+.modal_general:target .modal_eliminar {
+    transform: scale(1);
+}
 .modal_general:target .modal_reportar {
     transform: scale(1);
 }
@@ -491,8 +515,30 @@ button p {
     font-family: 'Myriad Pro Regular' ;
     font-size: 24px;
     padding-bottom: 2vh;
-/**/
+}
 
+.modal_eliminar {
+    background-color: #ffffff;
+    border: 2px solid black;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    transform: scale(0.7);
+    display: flex;
+    z-index: 3;
+    transition: transform 0.5s ease;
+    font-family: 'Myriad Pro Regular' ;
+    font-size: 24px;
+    padding-bottom: 2vh;
+}
+
+.modal_eliminar .contain-tr .img1 {
+    width: 36px;
+    height: 31px;
+    margin: 10px;
+    border: 3px solid #000;
+    cursor: pointer;
 }
 
 .modal_header {
