--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -6,6 +6,8 @@ html {
 
 body {
     margin: 0;
+    overflow-x: hidden;
+    
 }
 
 .preloader {
@@ -25,6 +27,7 @@ body {
     justify-content: center;
     z-index: 99;
     animation: preloaderAnimation 1s ease 5s forwards;
+    display: none;
 }
 
 @keyframes preloaderAnimation {
@@ -77,9 +80,9 @@ body {
     animation: signIn 4s ease forwards;
 }
 
-@media only screen and (max-width:950px){
-    .welcome{
-    border-radius: 7vi;
+@media only screen and (max-width:950px) {
+    .welcome {
+        border-radius: 7vi;
     }
 }
 
@@ -230,7 +233,6 @@ main {
     flex-direction: column;
     padding: 1vw;
     background-color: white;
-    min-height: 1200px;
 }
 
 
@@ -256,7 +258,7 @@ a:hover {
 
 /* Indicadores */
 
-.hamburguesita{
+.hamburguesita {
     display: none;
     width: 36px;
     height: 31px;
@@ -267,7 +269,8 @@ a:hover {
     margin-left: 1vw;
 }
 
-.indicadores, .indicadoresPhone {
+.indicadores,
+.indicadoresPhone {
     display: flex;
     flex-direction: column;
     margin-bottom: 2vw;
@@ -338,7 +341,7 @@ a:hover {
     height: 81px;
 }
 
-.indicadoresPhone{
+.indicadoresPhone {
     display: none;
 }
 
@@ -361,11 +364,11 @@ button p {
 }
 
 @media only screen and (max-width:1570px) {
-    .indicadores{
+    .indicadores {
         display: none;
     }
 
-    .indicadoresPhone{
+    .indicadoresPhone {
         display: flex;
     }
 
@@ -377,27 +380,30 @@ button p {
         height: auto;
         width: fit-content;
         padding: 1rem;
-    }    
-    
+    }
+
     .indicadoresPhone .tbody .contain-tr img {
         display: none;
     }
 
-    .indicadoresPhone .th{
+    .indicadoresPhone .th {
         color: #606060;
         align-self: start;
     }
 }
 
 @media only screen and (max-width:800px) {
+
     .leftOpcs,
     .rightOpcs {
         display: none;
     }
-    .hamburguesita{
+
+    .hamburguesita {
         display: flex;
     }
-    .headerCenter{
+
+    .headerCenter {
         padding-left: 0;
     }
 }
@@ -462,10 +468,11 @@ button p {
 
 }
 
-.modal_general:target{
+.modal_general:target {
     opacity: 1;
     visibility: visible;
 }
+
 .modal_general:target .modal_añadir {
     transform: scale(1);
 }
@@ -473,7 +480,8 @@ button p {
 .modal_general:target .modal_reportar {
     transform: scale(1);
 }
-.modal_general:target .modal_ayuda{
+
+.modal_general:target .modal_ayuda {
     transform: scale(1);
 }
 
@@ -488,10 +496,10 @@ button p {
     display: flex;
     z-index: 3;
     transition: transform 0.5s ease;
-    font-family: 'Myriad Pro Regular' ;
+    font-family: 'Myriad Pro Regular';
     font-size: 24px;
     padding-bottom: 2vh;
-/**/
+    /**/
 
 }
 
@@ -503,7 +511,7 @@ button p {
     align-items: center;
 }
 
-.centered{
+.centered {
     flex-grow: 1;
     display: flex;
     flex-direction: row;
@@ -511,7 +519,7 @@ button p {
     justify-content: center;
 }
 
-.centered h3{
+.centered h3 {
     margin: 0;
 }
 
@@ -533,10 +541,10 @@ button p {
     display: flex;
     text-align: center;
     font-size: 130%;
-    
-} 
 
-.modal_reportar{
+}
+
+.modal_reportar {
     background-color: #ffffff;
     border: 2px solid black;
     width: auto;
@@ -551,46 +559,50 @@ button p {
 }
 
 
-.name{
+.name {
     display: flex;
     align-items: center;
     gap: 1vw;
 }
 
-.correo{
+.correo {
     display: flex;
     align-items: center;
     gap: 1vw;
 }
-.cel{
+
+.cel {
     display: flex;
     align-items: center;
     gap: 1vw;
-    
+
 }
+
 .motivo {
     display: flex;
     align-items: center;
     gap: 1vw;
 }
+
 .motivo .motivo_cuadro {
     height: 15vh;
-    
-}
-.modal_contain{
-    font-family: 'Myriad Pro Regular' ;
-    font-size: 20px;
-    
+
 }
 
-.modal_contain label{
+.modal_contain {
+    font-family: 'Myriad Pro Regular';
+    font-size: 20px;
+
+}
+
+.modal_contain label {
     width: 18rem;
     text-align: center;
     font-size: 122%;
 }
-    
 
-.modal_contain input{
+
+.modal_contain input {
     border-radius: 25px;
     flex-grow: 1;
     display: flex;
@@ -603,12 +615,13 @@ button p {
     margin: 1vw;
 
 }
-h1{
+
+h1 {
     text-align: center;
 }
 
 /*Modulo de AYUDA*/
-.modal_ayuda{
+.modal_ayuda {
     background-color: #ffffff;
     border: 2px solid black;
     width: auto;
@@ -620,11 +633,11 @@ h1{
     z-index: 3;
     transition: transform 0.5s ease;
     padding-bottom: 2vh;
-    
+
 }
 
 /*Confirmacion modulos*/
-.modal_seguro{
+.modal_seguro {
     background-color: #ffffff;
     border: 2px solid black;
     width: auto;
@@ -638,7 +651,7 @@ h1{
     padding-bottom: 2vh;
 }
 
-.modal_seguro strong{
+.modal_seguro strong {
     text-align: center;
     margin: 5vw;
     font-family: 'Myriad Pro Regular';
@@ -646,7 +659,68 @@ h1{
     width: 30rem;
 }
 
-.botones{
+.botones {
     display: flex;
     gap: 5vw;
 }
+
+/*indice de menu*/
+
+.indice {
+    position: fixed;
+    top: 82px;
+    left: 0;
+    width: 340px;
+    height: auto;
+    background: white;
+    transition: left 0.5s ease;
+    box-shadow: 2px 0 20px black;
+    z-index: 1000;
+}
+.indice:target{
+    display: none;
+}
+.indice_click:checked~.indice {
+    left: 0;
+}
+.indice_content a{
+    color: #000;
+}
+
+.indice_header {
+    background:white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid black
+}
+
+.indice_header p{
+    flex-grow: 1;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin: 0;
+    color: #000;
+}
+
+.indice_item {
+    padding: 16px 24px;
+    border-bottom: 1px solid #000;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    text-decoration: none;
+    align-items: center;
+}
+
+
+
+.control {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
+}
+
