feat :sparkles: Add modal perfil

--- a/style/styleMain.css
+++ b/style/styleMain.css
@@ -27,7 +27,6 @@ body {
     justify-content: center;
     z-index: 99;
     animation: preloaderAnimation 1s ease 5s forwards;
-    display: none;
 }
 
 @keyframes preloaderAnimation {
@@ -475,7 +474,6 @@ button p {
     align-items: center;
     justify-content: center;
     z-index: 3;
-    opacity: 0;
     flex-grow: 1;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -722,12 +720,6 @@ h1 {
     box-shadow: 2px 0 20px black;
     z-index: 1000;
 }
-.indice:target{
-    display: none;
-}
-.indice_click:checked~.indice {
-    left: 0;
-}
 .indice_content a{
     color: #000;
 }
@@ -769,3 +761,57 @@ h1 {
     z-index: 1001;
 }
 
+.perfil2 {
+    position: fixed;
+    top: 82px;
+    right: 0;
+    width: 340px;
+    height: auto;
+    background: white;
+    transition: left 0.5s ease;
+    box-shadow: 2px 0 20px black;
+    z-index: 1000;
+}
+
+.i1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.i1 img{
+    width: 53px;
+    height: 53px;
+}
+.indice_content2 .th{
+    color: #606060;
+    align-self: start;
+}
+.i2{
+    padding: 0 1vw;
+}
+.i2 a{
+    text-decoration: none;
+}
+.button2{
+    color: #000;
+    background-color: #FE702E;
+    border: none;
+    width: 120px;
+    height: 30px;
+    border-radius: 50px;
+    display: block;
+    margin: 1vw;
+    justify-self: center;
+}
+.button3{
+    color: #000;
+    background-color: red;
+    border: none;
+    width: 120px;
+    height: 30px;
+    border-radius: 50px;
+    display: block;
+    margin: 1vw;
+    justify-self: center;
+}
